# app/internal/delivery/http/v1/auth.go
@@ -7,16 +7,15 @@ import (
 )
 
 type userSignUpInput struct {
-	Name  string `json:"name" validate:"required,min=2,max=64"`
-	Email string `json:"email" validate:"required,email,max=64"`
-	//Phone    string `json:"phone" validate:"required,phone,max=13"`
-	Password string `json:"password" validate:"required,min=8,max=64"`
+	UserName string `json:"username" binding:"required,min=4,max=64"`
+	Email    string `json:"email" binding:"required,email,max=64"`
+	Password string `json:"password" binding:"required,min=8,max=64"`
 }
 
 type userSignInInput struct {
-	Name     string `json:"name" validate:"required,min=2,max=64"`
-	Email    string `json:"email" validate:"required,email,max=64"`
-	Phone    string `json:"phone" validate:"required,phone,max=13"`
+	Name  string `json:"name" validate:"required,min=2,max=64"`
+	Email string `json:"email" validate:"required,email,max=64"`
+	//Phone    string `json:"phone" validate:"required,phone,max=13"`
 	Password string `json:"password" validate:"required,min=8,max=64"`
 }
 
@@ -31,29 +30,55 @@ func (h *Handler) initAuthRouter(api *gin.RouterGroup) {
 	{
 		auth.POST("/sign-up", h.signUp)
 		auth.POST("/sign-in", h.signIn)
+
 		auth.POST("/refresh", h.userRefresh)
+
+		auth.GET("/me", h.userIdentity, h.userPing)
+		auth.GET("/verify", h.userIdentity, h.verifyToken)
 	}
 }
 
+// @Summary User SignUp
+// @Tags auth
+// @Description create user account
+// @ModuleID authSignUp
+// @Accept  json
+// @Produce  json
+// @Param input body userSignUpInput true "sign up info"
+// @Success 201 {string} string "ok"
+// @Failure 400,404 {object} errorResponse
+// @Failure 500 {object} errorResponse
+// @Failure default {object} errorResponse
+// @Router /auth/sign-up [post]
 func (h *Handler) signUp(c *gin.Context) {
 	var input userSignUpInput
 	if err := c.BindJSON(&input); err != nil {
 		newErrorResponse(c, http.StatusBadRequest, err.Error())
 		return
 	}
-	if err := h.services.Users.SignUp(c.Request.Context(), service.UserSignUpInput{
+	if err := h.services.Authorization.SignUp(c.Request.Context(), service.UserSignUpInput{
+		UserName: input.UserName,
 		Email:    input.Email,
-		Name:     input.Name,
 		Password: input.Password,
 	}); err != nil {
 		newErrorResponse(c, http.StatusInternalServerError, err.Error())
 		return
 	}
-	c.JSON(http.StatusOK, map[string]interface{}{
-		"status": "ok",
-	})
+	c.JSON(http.StatusOK, statusResponse{"ok"})
 }
 
+// @Summary User SignIn
+// @Tags auth
+// @Description user sign in
+// @ModuleID authSignIn
+// @Accept  json
+// @Produce  json
+// @Param input body userSignInInput true "sign in info"
+// @Success 200 {object} tokenResponse
+// @Failure 400,404 {object} errorResponse
+// @Failure 500 {object} errorResponse
+// @Failure default {object} errorResponse
+// @Router /auth/sign-in [post]
 func (h *Handler) signIn(c *gin.Context) {
 
 	var input userSignInInput
@@ -63,7 +88,7 @@ func (h *Handler) signIn(c *gin.Context) {
 		return
 	}
 
-	res, err := h.services.Users.SignIn(c.Request.Context(), service.UserSignInInput{
+	res, err := h.services.Authorization.SignIn(c.Request.Context(), service.UserSignInInput{
 		Email:    input.Email,
 		Password: input.Password,
 	})
@@ -80,9 +105,21 @@ func (h *Handler) signIn(c *gin.Context) {
 }
 
 type refreshInput struct {
-	RefreshToken string `json:"refresh_token"`
+	RefreshToken string `json:"refresh_token" binding:"required"`
 }
 
+// @Summary Refresh Token
+// @Tags auth
+// @Description user refresh token
+// @ModuleID authRefreshToken
+// @Accept  json
+// @Produce  json
+// @Param input body refreshInput true "refresh token input"
+// @Success 200 {object} tokenResponse
+// @Failure 400,404 {object} errorResponse
+// @Failure 500 {object} errorResponse
+// @Failure default {object} errorResponse
+// @Router /auth/refresh [post]
 func (h *Handler) userRefresh(c *gin.Context) {
 	var input refreshInput
 
@@ -91,9 +128,10 @@ func (h *Handler) userRefresh(c *gin.Context) {
 		return
 	}
 
-	res, err := h.services.Users.RefreshToken(c.Request.Context(), input.RefreshToken)
+	res, err := h.services.Authorization.RefreshToken(c.Request.Context(), input.RefreshToken)
 	if err != nil {
 		newErrorResponse(c, http.StatusInternalServerError, err.Error())
+		return
 	}
 
 	c.JSON(http.StatusOK, tokenResponse{
@@ -101,4 +139,56 @@ func (h *Handler) userRefresh(c *gin.Context) {
 		RefreshToken: res.RefreshToken,
 		ExpireIn:     int(res.ExpireIn.Seconds()),
 	})
+}
+
+// @Summary User check token
+// @Tags auth
+// @Description user check access token
+// @ModuleID authPing
+// @Accept  json
+// @Produce  json
+// @Security ApiKeyAuth
+// @Success 200 {object} statusResponse
+// @Failure 400,404 {object} errorResponse
+// @Failure 500 {object} errorResponse
+// @Failure default {object} errorResponse
+// @Router /auth/me [get]
+func (h *Handler) userPing(c *gin.Context) {
+	_, err := h.parseAuthHeader(c)
+	if err != nil {
+		newErrorResponse(c, http.StatusUnauthorized, err.Error())
+		return
+	}
+	c.JSON(http.StatusOK, statusResponse{"ok"})
+}
+
+// @Summary Verify token for other apps
+// @Tags backend
+// @Description verify token for other apps
+// @ModuleID authVerify
+// @Accept  json
+// @Produce  json
+// @Security ApiKeyAuth
+// @Success 200 {object} statusResponse
+// @Failure 400,404 {object} errorResponse
+// @Failure 500 {object} errorResponse
+// @Failure default {object} errorResponse
+// @Router /auth/verify [get]
+func (h *Handler) verifyToken(c *gin.Context) {
+	usr, err := h.parseAuthHeader(c)
+	if err != nil {
+		newErrorResponse(c, http.StatusUnauthorized, err.Error())
+		return
+	}
+	if err != nil {
+		newErrorResponse(c, http.StatusInternalServerError, err.Error())
+		return
+	}
+	res, err := h.services.Authorization.GetFullUserInfo(c.Request.Context(), usr.userID)
+	if err != nil {
+		newErrorResponse(c, http.StatusBadRequest, err.Error())
+		return
+	}
+	c.JSON(http.StatusOK, res)
+
 }
